# WasteManagement

./: .gitignore  CHANGELOG.md  Dockerfile  Procfile  README.md  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml  requirements.txt  runtime.txt
api/: serializers.py  urls.py  views.py
records/: admin.py  apps.py  constants.py  filters.py  forms.py  models.py  urls.py  utils.py  views.py
records/migrations/: 0001_initial.py
records/templates/records/: delete-record.html  export-to-csv.html  export-to-pdf.html  records-form.html  records.html  reports.html  single-record.html
static/styles/: app.css
templates/: delete.html  main.html  navbar.html  pagination.html
users/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  utils.py  views.py
users/migrations/: 0001_initial.py  0002_alter_profile_profile_image.py  0003_alter_profile_profile_image.py
users/templates/users/: account.html  certificates_form.html  inbox.html  login-register.html  message.html  message_form.html  profile_form.html  profiles.html  user-profile.html
waste/: asgi.py  settings.py  urls.py  wsgi.py
