[tool.poetry]
name = "waste-management"
version = "0.1.0"
description = "Django web application to manage waste records"
authors = ["Bogdan Fometescu <75015831+BogdanMFometescu@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
setuptools = "^69.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
